--- a/Loka3Lib/Loka3Lib.vcxproj.filters
+++ b/Loka3Lib/Loka3Lib.vcxproj.filters
@@ -15,16 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="LinearAlgebra.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="Loka3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Loka3math.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Loka3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Loka3math.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
